test/files/neg/t1422.scala
<<<<<<< HEAD
case class A(private[this] val foo:String)
=======
case class A(private[this] val foo:String) { }
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
